[project]
name = "datalumina-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
]
